@@ -295,7 +295,8 @@ cdl_package CYGPKG_HAL_I386_PC {
 	 display       "Load into higher memory (2MB)"
 	 flavor        bool
 	 default_value 0
-         requires { CYG_HAL_STARTUP == "RAM" }
+         requires { CYG_HAL_STARTUP == "RAM" || CYG_HAL_STARTUP == "GRUB" }
+
 	 no_define
 	 description "This option enables building RAM applications
 	              which have a start address outside of the area
@@ -311,7 +312,10 @@ cdl_package CYGPKG_HAL_I386_PC {
 			                         "i386_pc_ram_hi" : \
 						 "i386_pc_ram") : \
 		     CYG_HAL_STARTUP == "ROM"  ? "i386_pc_rom" : \
-		     CYG_HAL_STARTUP == "GRUB" ? "i386_pc_grub" : \
+		     CYG_HAL_STARTUP == "GRUB" ? \
+		         (CYGHWR_HAL_I386_PC_LOAD_HIGH ? \
+			                         "i386_pc_grub_hi" : \
+						 "i386_pc_grub") : \
 	                                         "i386_pc_floppy" }
 
         cdl_option CYGHWR_MEMORY_LAYOUT_LDI {
@@ -324,7 +328,10 @@ cdl_package CYGPKG_HAL_I386_PC {
 			                             "<pkgconf/mlt_i386_pc_ram_hi.ldi>" : \
 						     "<pkgconf/mlt_i386_pc_ram.ldi>") : \
 		         CYG_HAL_STARTUP == "ROM"  ? "<pkgconf/mlt_i386_pc_rom.ldi>" : \
-		         CYG_HAL_STARTUP == "GRUB" ? "<pkgconf/mlt_i386_pc_grub.ldi>" : \
+		         CYG_HAL_STARTUP == "GRUB" ? \
+		             (CYGHWR_HAL_I386_PC_LOAD_HIGH ? \
+			                             "<pkgconf/mlt_i386_pc_grub_hi.ldi>" : \
+						     "<pkgconf/mlt_i386_pc_grub.ldi>") : \
                                                      "<pkgconf/mlt_i386_pc_floppy.ldi>" }
         }
 
@@ -338,7 +345,10 @@ cdl_package CYGPKG_HAL_I386_PC {
 			                             "<pkgconf/mlt_i386_pc_ram_hi.h>" : \
 						     "<pkgconf/mlt_i386_pc_ram.h>") : \
 		         CYG_HAL_STARTUP == "ROM"  ? "<pkgconf/mlt_i386_pc_rom.h>" : \
-		         CYG_HAL_STARTUP == "GRUB" ? "<pkgconf/mlt_i386_pc_grub.h>" : \
+		         CYG_HAL_STARTUP == "GRUB" ? \
+		             (CYGHWR_HAL_I386_PC_LOAD_HIGH ? \
+			                             "<pkgconf/mlt_i386_pc_grub_hi.h>" : \
+						     "<pkgconf/mlt_i386_pc_grub.h>") : \
                                                        "<pkgconf/mlt_i386_pc_floppy.h>" }
         }
     }
